IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/30/14: Fixed Tiltxcorr when using shift limits (In 4.7).

4/27/14: Changed Squeezevol to allow odd output sizes in X and Z (In 4.7).

4/16/14: Fixed loss of bottom and top lines in interpolation routine when
there is 0 or 180 degree rotation (In 4.7).

4/16/14: Fixed clip flipxy when writing signed bytes (In 4.7).

4/15/14: IMOD_4-7-4
4/15/14: In eTomo - Tomogram Generation fixing an initialization error in
logarithm density scaling.  Also handled the logarithm offset from
copytomocoms (In 4.7).(Bug# 1796)

4/14/14: Made Copytomocoms set the linear scaling properly in tilt.com when the cryo
template is used and turns off logarithmic scaling (In 4.7).

4/9/14: Suppressed Newstack warning about truncated sections unless a lot of
pixels were truncated (In 4.7).

4/2/14: Fixed pixel size and model scaling set from a TIFF file when there is
a resolution with no units (In 4.7).

4/2/14: Fixed setupstitch when there is an error reading header (In 4.7).

3/31/14:IMOD_4-7-3 released
3/29/14: In eTomo - PEET, fixed the loading of a non-array selectClassID
value, and fixed more problems with unnecessary errors generated because of
missing parameters (In 4.7).(Bug# 1789)

3/27/14: Fixed a communication problem between eTomo and 3dmod and rolled back
previous incorrect fixes from 2/14/14 and 3/14/14 (In 4.7).(Bug# 1792)

3/22/14: Fixed newstack when -fromone used with default section list (In 4.7).

3/14/14: Fixed a Windows problem with opening 3dmod from eTomo where
imodsendevent was called incorrectly (In 4.7).(Bug# 1786)

3/14/14: Made the close button on the detached toolbar of linked slicers close
all the linked slicers (In 4.7).

3/13/14: Fixed a problem in eTomo - PEET where tilt angles where not being
loaded from a renamed tilt log file (In 4.7).(Bug# 1782)

3/8/14: Fixed deferring of initial messages to 3dmod on Mac (In 4.7).
